<resources>
    <string name="app_name">Timeriffic</string>
    <string name="settings">Settings</string>
    <string name="check_now">Check Now</string>
    <string name="about">About</string>
    <string name="reset">Reset</string>
    <string name="report_error">Report Error</string>
    <string name="edit">Edit</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="insert_action">Insert New Action</string>
    <string name="insert_profile">Insert New Profile</string>
    <string name="append_profile">Add New Profile</string>
    <string name="prefs_title">Timeriffic - Preferences</string>
    <string name="prefs_enable_label">Enable Timeriffic</string>
    <string name="prefs_enable_on">Timeriffic is enabled.</string>
    <string name="prefs_enable_off">Timeriffic is disabled.</string>
    <string name="prefs_dismiss_intro_label">Don\'t display introduction</string>
    <string name="prefs_dismiss_intro_on">Introduction is skipped.</string>
    <string name="prefs_dismiss_intro_off">Introduction is visible.</string>
    <string name="prefs_check_service_label">Validate Audio Service</string>
    <string name="prefs_check_service_off">Do not validate audio service is present.</string>
    <string name="prefs_check_service_on">Validate audio service is present.</string>
    <string name="prefs_toggle_anim_label">Toggle Animation</string>
    <string name="prefs_toggle_anim_tooltip">Select the animation of the toggle icon in the profile list screen.</string>
    <string name="save_to_sd">Save to SD Card</string>
    <string name="restore_from_sd">Restore from SD Card</string>
    <string name="prefs_display_notif_label">Display notification on profile change</string>
    <string name="prefs_display_notif_on">Display a notification when a profile changes</string>
    <string name="prefs_display_notif_off">Do not display a notification when a profile changes</string>
    <string name="intro_title">Timeriffic %s - Introduction</string>
    <string name="intro_button_continue">Continue</string>
    <string name="intro_button_minEms">0</string>
    <string name="intro_checkbox_dont_display_again">Don\'t display again</string>
    <string name="profiles_empty_help">Use the MENU key to add a new profile.</string>
    <string name="timedactioncontextmenu_title">Timed Action</string>
    <string name="profilecontextmenu_title">Profile</string>
    <string name="insertprofile_new_profile_title">New Profile</string>
    <string name="deleteprofile_title">Delete profile</string>
    <string name="deleteprofile_msgbody">Are you sure you want to delete profile \'%s\' and all its actions?</string>
    <string name="deleteprofile_button_delete">Delete</string>
    <string name="deleteprofile_button_cancel">Cancel</string>
    <string name="deleteaction_title">Delete action</string>
    <string name="deleteaction_msgbody">Are you sure you want to delete action \'%s\'?</string>
    <string name="deleteaction_button_delete">Delete</string>
    <string name="deleteaction_button_cancel">Cancel</string>
    <string name="resetprofiles_msg_confirm_delete">Delete and Reset <u>all Profiles</u>? <b>No undo!</b></string>
    <string name="resetprofiles_button_cancel">Cancel</string>
    <string name="timedaction_no_action">No action</string>
    <string name="timedaction_nodays_never">Never</string>
    <string name="timedaction_time_0_minute">%1$tk:%1$tM</string>
    <string name="timedaction_time_with_minutes">%1$tk:%1$tM</string>
    <string name="timedaction_airplane_on">Airplane On</string>
    <string name="timedaction_airplane_off">Airplane Off</string>
    <string name="timedaction_wifi_on">Wifi On</string>
    <string name="timedaction_wifi_off">Wifi Off</string>
    <string name="timedaction_bluetooth_on">Bluetooth On</string>
    <string name="timedaction_bluetooth_off">Bluetooth Off</string>
    <string name="timedaction_ringer_int">Ringer %d%%</string>
    <string name="timedaction_notif_int">Notification %d%%</string>
    <string name="timedaction_brightness_int">Brightness %d%%</string>
    <string name="timedaction_apndroid_on">3G/2G Data On</string>
    <string name="timedaction_apndroid_off">3G/2G Data Off</string>
    <string name="timedaction_media_int">Media %d%%</string>
    <string name="timedaction_alarm_int">Alarm %d%%</string>
    <string name="timedaction_system_vol_int">System %d%%</string>
    <string name="timedaction_voice_call_vol_int">Voice %d%%</string>
    <string name="timedaction_auto_brightness">Automatic Brightness</string>
    <string name="timedaction_automatic">Automatic</string>
    <string name="timedaction_notif_ring_sync">Notification uses ring vol.</string>
    <string name="editaction_notif_ring_sync">Notification uses ring volume.</string>
    <string name="actionlabel_notif_ring_sync">Uses ring volume</string>
    <string name="editprofile_title">Timeriffic - Edit Profile</string>
    <string name="editprofile_profile_name">Profile Name:</string>
    <string name="editprofile_profile_hint">Profile Name</string>
    <string name="editprofile_checkbox_enabled">Enabled</string>
    <string name="editprofile_button_accept">Accept</string>
    <string name="editaction_title">Timeriffic - Edit Timed Action</string>
    <string name="editaction_section_action">Action</string>
    <string name="editaction_section_time_and_day">Time and Day</string>
    <string name="editaction_section_days">Days</string>
    <string name="editaction_button_label">  <b>@</b>\n  $</string>
    <string name="setting_not_supported">Not Supported</string>
    <string name="setting_not_installed">Not installed</string>
    <string name="editaction_ringer">Ringer</string>
    <string name="editaction_vibrate">Vibrate</string>
    <string name="editaction_volume">Ring Volume</string>
    <string name="editaction_brightness">Brightness</string>
    <string name="editaction_wifi">Wifi</string>
    <string name="editaction_airplane">Airplane Mode</string>
    <string name="editaction_media_volume">Media Volume</string>
    <string name="editaction_alarm_volume">Alarm Volume</string>
    <string name="editaction_notif_volume">Notification Vol.</string>
    <string name="editaction_system_volume">System Volume</string>
    <string name="editaction_voice_call_volume">Voice Call Volume</string>
    <string name="editaction_bluetooth">Bluetooth</string>
    <string name="editaction_apndroid">APNdroid</string>
    <string name="percent_do_not_change">Do not change.</string>
    <string name="percent_change_to">Change to following value:</string>
    <string name="percent_button_unchanged">Unchanged</string>
    <string name="percent_button_accept">Accept</string>
    <string name="enum_unchanged">Unchanged</string>
    <string name="toggle_turn_on">Turn on</string>
    <string name="toggle_turn_off">Turn off</string>
    <string name="toast_next_change_at_datetime">Next Change: %s</string>
    <string name="toast_next_alarm_date_time">yyyy/MM/dd HH:mm:ss</string>
    <string name="globalstatus_nextlast_date_time">yyyy/MM/dd HH:mm:ss</string>
    <string name="globalstatus_next">Next:</string>
    <string name="globalstatus_last">Last:</string>
    <string name="globalstatus_disabled">Timeriffic is disabled</string>
    <string name="ringermode_ring">Ring</string>
    <string name="ringermode_mute">Mute</string>
    <string name="vibrateringermode_vibrate">Vibrate</string>
    <string name="vibrateringermode_no_vibrate">No vibrate</string>
    <string name="vibrateringermode_no_ringer_vibrate">Vibrate for notifications but not ringer</string>
    <string name="vibrateringermode_no_notif_vibrate">Vibrate for ringer but not notifications</string>
    <string name="checkservices_dlg_title">Missing Services</string>
    <string name="checkservices_ok_button">OK</string>
    <string name="checkservices_skip_button">Do not show again</string>
    <string name="checkservices_warning">Warning! The following function are not available on this particular phone:</string>
    <string name="checkservices_miss_audio_service">Audio volume and ringer</string>
    <string name="checkservices_miss_wifi_service">Wifi toggle</string>
    <string name="checkservices_miss_airplane">Airplane mode</string>
    <string name="checkservices_miss_brightness">Brightness</string>
    <string name="checkservices_miss_bluetooh">Bluetooth</string>
    <string name="checkservices_miss_apndroid">APNDroid</string>
    <string name="checkservices_miss_ringguard">RingGuard</string>
    <string name="checkservices_explain_why">explain why</string>
    <string name="checkservices_help_bluetooh">Bluetooth control requires Android 2.0 or more.</string>
    <string name="checkservices_help_application">To enable this feature, install the application \'%s\' from Android Market.</string>
    <string name="install_now_button">Install Now</string>
    <string name="errorreport_title">Timeriffic - Error Report</string>
    <string name="errorreport_generate">Generate</string>
    <string name="errorreport_next">Next &gt;</string>
    <string name="errorreport_prev">&lt; Previous</string>
    <string name="errorreport_user1">Please indicate the kind of issue you would like to report:</string>
    <string name="errorreport_program_err">Program Error</string>
    <string name="errorreport_feat_req">Feature Request</string>
    <string name="errorreport_user2">To help us understand the issue, please provide some comments:</string>
    <string name="errorreport_user_hint">Before we can continue, please describe here your error or your feature request.</string>
    <string name="errorreport_user_hint_english">(Please write the comment in English if possible.)</string>
    <string name="errorreport_nomailapp">No Email/Gmail app found to send the message. Please install one such as K9 from Market first.</string>
    <string name="errorreport_emailheader">This is a bug report for Timeriffic./
The automated report starts here.
    </string>
</resources>